--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="pets-main-image">
 				<div class="pets-main-block">
 					<h1 class="pets-main-title">Питомник породистых животных рядом с&nbsp;вашим домом</h1>
-					<span class="pets-main-text">животные как дети &mdash; им нужны мы</span>
+					<span class="pets-main-text">ЖИВОТНЫЕ КАК ДЕТИ &mdash; ИМ НУЖНЫ МЫ</span>
 				</div>
 			</div>			
 		</section>
@@ -69,14 +69,14 @@
 							<h3 class="our-dogs-group-title">Французкий бульдог</h3>
 							<img class="our-dogs-group-image" src="images/photo_french_bulldog.png" alt="Картинка французкого бульдога">
 							<p class="our-dog-text">Идеальный вариант городской собаки &mdash; они входят в тройку самых популярных собак на планете. Любят короткие прогулки и хорошо поспать.</p>
-							<span><a class="our-dogs-group-link" href="https://vk.com/epixx_pets/french_bulldog">посмотреть щенков</a></span>
+							<span><a class="our-dogs-group-link" href="https://vk.com/epixx_pets/french_bulldog">ПОСМОТРЕТЬ ЩЕНКОВ</a></span>
 
 						</div>
 						<div class="our-dogs-group">
 							<h3 class="our-dogs-group-title">Золотистый ретривер</h3>
 							<img class="our-dogs-group-image" src="images/photo_golden_retriever.png" alt="Картинка Золотистого ретривера" >
 							<p class="our-dog-text">Добродушные, ориентированные на людей собаки. Они отлично ведут себя с детьми и больными. Могут быть повыдырями.</p>
-							<span><a class="our-dogs-group-link" href="https://vk.com/epixx_pets/golden_retriever">посмотреть щенков</a></span>
+							<span><a class="our-dogs-group-link" href="https://vk.com/epixx_pets/golden_retriever">ПОСМОТРЕТЬ ЩЕНКОВ</a></span>
 						</div>
 					</div>
 
@@ -85,14 +85,14 @@
 							<h3 class="our-dogs-group-title">Чау-Чау</h3>
 							<img class="our-dogs-group-image" src="images/photo_chow_chow.png" alt="Картинка чау-чау">
 							<p class="our-dog-text">Эти собаки с характером. Они всегда серьезны, но временами проявляют характер.</p>
-							<span><a class="our-dogs-group-link" href="https://vk.com/epixx_pets/chow_chow">посмотреть щенков</a>
+							<span><a class="our-dogs-group-link" href="https://vk.com/epixx_pets/chow_chow">ПОСМОТРЕТЬ ЩЕНКОВ</a>
 							</span>
 						</div>
 						<div class="our-dogs-group">
 							<h3 class="our-dogs-group-title">Пудель</h3>
 							<img class="our-dogs-group-image" src="images/photo_poodle.png" alt="Картинка Пуделя">
 							<p class="our-dog-text">Активные и компанейские собаки. Любят много гулять, обладают отличным чувством юмора.</p>
-							<span><a class="our-dogs-group-link" href="https://vk.com/epixx_pets/poodle">посмотреть щенков</a></span>
+							<span><a class="our-dogs-group-link" href="https://vk.com/epixx_pets/poodle">ПОСМОТРЕТЬ ЩЕНКОВ</a></span>
 						</div>
 					</div>
 				</div>
@@ -184,9 +184,9 @@
 			<li class="footer-item"><a class="footer-link" href="#contact">Контакты</a></li>
 		</ul>
 		<div class="footer-social">
-			<a href="#"><img src="#" alt="Иконка VK"></a>
-			<a href="#"><img src="#" alt="Иконка FB"></a>
-			<a href="#"><img src="#" alt="Иконка Insta"></a>
+			<a href="#" class="footer-social-icon vk"></a>
+			<a href="#" class="footer-social-icon fb"></a>
+			<a href="#" class="footer-social-icon ista"></a>
 		</div>
 	</footer>
 	<!-- End -->
