--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 						<h2 class="all-about-pets-title">Всё о животных</h2>
 						<p class="all-about-pets-text">Мы ведем активный блог про наших животных в социальных сетях &mdash; присоединяйтесь к нам. Полезные материалы про обучение, дрессировку, питание. </p>
 							<div class="all-about-pets-social">
-								<a href="#"><img src="#" alt="Иконка VK"></a>
-								<a href="#"><img src="#" alt="Иконка FB"></a>
-								<a href="#"><img src="#" alt="Иконка Insta"></a>
+								<a href="#" class="all-about-social vko"></a>
+								<a href="#" class="all-about-social fbo"></a>
+								<a href="#" class="all-about-social inst"></a>
 							</div>
 					</div>
 				<div class="all-column-2">
@@ -186,7 +186,7 @@
 		<div class="footer-social">
 			<a href="#" class="footer-social-icon vk"></a>
 			<a href="#" class="footer-social-icon fb"></a>
-			<a href="#" class="footer-social-icon ista"></a>
+			<a href="#" class="footer-social-icon insta"></a>
 		</div>
 	</footer>
 	<!-- End -->
