стилизация емаила и телефона в блоке контакты

--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
 				</div>
 				<div class="contact-column-info">
 					<span class="contact-column-title">E-MAIL</span>
-					<p class="contact-column-subline">pethelp@pets.ru</p>
+					<p class="contact-column-subline">
+						<a href="mailto:pethelp@pets.ru">pethelp@pets.ru</a></p>
 				</div>
 			</div>
 			<div class="contact-column">
@@ -169,7 +170,9 @@
 				</div>
 			<div class="contact-column-info">
 					<span class="contact-column-title">ТЕЛЕФОН</span>
-					<p class="contact-column-subline">+7 (925) 256 78 96<br>Мы принимаем звонки с 10:00 до 21:00</p>
+					<p class="contact-column-subline">
+						<a href="tel:89252567896">+7 (925) 256 78 96</a>
+					<br>Мы принимаем звонки с 10:00 до 21:00</p>
 				</div>
 			</div>
 		</section>
