--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
 	<div class="wrapper">
 	<!-- Шапка с навигацией -->
-	<header>
-		<div class="pets-header">
+	<header class ="pets-header">
 			<img class="pets-header-logo" src="images/pets_logo.png" alt="Логотип Питомника" >
 		<nav class="pets-header-nav">
 			<ul class="pets-nav-list">
@@ -24,7 +23,6 @@
 			<div class="pets-header-phone">
 				<a class="pets-header-phone-link" href="tel:892525698877">+ 7 (925) 256 98 77</a>
 			</div>
-		</div>
 	</header>
 	<!-- Основной контент -->
 	<!-- Главная секция -->
